APR-2555 - Style fix to prevent inline error messages from wrapping

--- a/src/SFA.DAS.RoatpOversight.Web/wwwroot/stylesheets/application.css
+++ b/src/SFA.DAS.RoatpOversight.Web/wwwroot/stylesheets/application.css
@@ -418,7 +418,7 @@
 /* Inline search component */
 
 @media (min-width: 40.0625em) {
-    .app-search-form {
+    .app-search-form__group {
         max-width: 33%;
     }
 }
